# Project-Athena

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
bindings/: AcquisitionSettingsRecord.ts  AuthUserRecord.ts  ConnectionTestResult.ts  DuplicateHint.ts  ImportSettingsUpdate.ts  IntegrationSettingsRecord.ts  IntegrationSettingsUpdate.ts  LibraryScanResponse.ts  MediaType.ts  NotificationSettingsUpdate.ts  ProwlarrIntegrationRecord.ts  QbittorrentSettingsUpdate.ts  ReleaseCandidate.ts  RequestEventKind.ts  RequestListRecord.ts  RequestSubmissionDetailRecord.ts  ResolvedWork.ts  RuntimeSettingsUpdate.ts  ScoredCandidate.ts  SessionRecord.ts  SetupRequest.ts  StorageSettingsUpdate.ts  SubmissionSearchCandidate.ts  SubmissionSearchResult.ts  WorkSearch.ts
docker/: entrypoint.sh
docs/: unraid.md
frontend/: README.md  components.json  package-lock.json  package.json  playwright.config.ts  playwright.fullstack.config.ts  svelte.config.js  vite.config.ts
migrations/: 0001_initial.sql  0002_request_work_identity.sql  0003_search_and_sync.sql  0004_downloads.sql  0005_runtime_settings_and_synced_indexers.sql  0006_review_workflow.sql  0007_library_scan.sql  0008_review_queue_candidate_metadata.sql  0009_auth_submissions_notifications.sql
src/: app.rs  config.rs  lib.rs  main.rs  matcher.rs  notifications.rs
templates/: layout.html
tests/: config_paths.rs  e2e_request_flow.rs  export_types.rs  health_smoke.rs  import_classifier.rs  library_scan_http.rs  matcher_scores.rs  offline_boot.rs  openlibrary_client.rs  request_http.rs  (+9 more)
(+140 files in other folders)
